# OpenVINO_2024

./: .clang-format  .editorconfig  CMakeLists.txt  README.md  main.cpp
models/: pe-01.xml
